--- a/Week-5/03-todo/backend/package.json
+++ b/Week-5/03-todo/backend/package.json
@@ -9,6 +9,7 @@
   "author": "Krish Patel",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "mongoose": "^8.4.3",
     "zod": "^3.23.8"
