--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.0",
     "mongoose": "^8.3.5",
+    "react-router-dom": "^6.24.1",
     "zod": "^3.23.8"
   }
 }
