--- a/Week-8/02-dukan-dashboard-tailwind/package.json
+++ b/Week-8/02-dukan-dashboard-tailwind/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@storybook/builder-vite": "^8.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
