--- a/Week-8/02-dukan-dashboard-tailwind/package.json
+++ b/Week-8/02-dukan-dashboard-tailwind/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.16.1",
     "@storybook/builder-vite": "^8.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
