--- a/My-Projects/paytm-basic/backend/package.json
+++ b/My-Projects/paytm-basic/backend/package.json
@@ -10,6 +10,11 @@
   "author": "Krish S Patel",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.1",
+    "zod": "^3.23.8"
   }
 }
